[package]
name = "apod-wallpaper"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
regex = { version = "1.8.1", default-features = false, features = ["std", "perf"] }
ureq = { version = "2.6.2", default-features = false, features = ["tls"] }
cfg-if = { version = "1.0.0", default-features = false }
wallpaper = { version = "3.2.0", optional = true }

[features]
nitrogen = []
wallpaper = ["dep:wallpaper"]
